@@ -19,84 +19,102 @@
 
 package org.elasticsearch.ingest.common;
 
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
-import java.nio.charset.StandardCharsets;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.Map;
-
+import org.elasticsearch.action.ActionRequest;
+import org.elasticsearch.action.ActionResponse;
+import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
+import org.elasticsearch.cluster.node.DiscoveryNodes;
+import org.elasticsearch.common.settings.ClusterSettings;
+import org.elasticsearch.common.settings.IndexScopedSettings;
+import org.elasticsearch.common.settings.Setting;
+import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.common.settings.SettingsFilter;
+import org.elasticsearch.common.unit.TimeValue;
+import org.elasticsearch.grok.Grok;
+import org.elasticsearch.grok.ThreadWatchdog;
+import org.elasticsearch.ingest.DropProcessor;
+import org.elasticsearch.ingest.PipelineProcessor;
 import org.elasticsearch.ingest.Processor;
+import org.elasticsearch.plugins.ActionPlugin;
 import org.elasticsearch.plugins.IngestPlugin;
 import org.elasticsearch.plugins.Plugin;
+import org.elasticsearch.rest.RestController;
+import org.elasticsearch.rest.RestHandler;
 
-public class IngestCommonPlugin extends Plugin implements IngestPlugin {
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.function.Supplier;
 
-    private final Map<String, String> builtinPatterns;
+import static java.util.Map.entry;
 
-    public IngestCommonPlugin() throws IOException {
-        this.builtinPatterns = loadBuiltinPatterns();
+public class IngestCommonPlugin extends Plugin implements ActionPlugin, IngestPlugin {
+
+    static final Map<String, String> GROK_PATTERNS = Grok.getBuiltinPatterns();
+    static final Setting<TimeValue> WATCHDOG_INTERVAL =
+        Setting.timeSetting("ingest.grok.watchdog.interval", TimeValue.timeValueSeconds(1), Setting.Property.NodeScope);
+    static final Setting<TimeValue> WATCHDOG_MAX_EXECUTION_TIME =
+        Setting.timeSetting("ingest.grok.watchdog.max_execution_time", TimeValue.timeValueSeconds(1), Setting.Property.NodeScope);
+
+    public IngestCommonPlugin() {
     }
 
     @Override
     public Map<String, Processor.Factory> getProcessors(Processor.Parameters parameters) {
-        Map<String, Processor.Factory> processors = new HashMap<>();
-        processors.put(DateProcessor.TYPE, new DateProcessor.Factory());
-        processors.put(SetProcessor.TYPE, new SetProcessor.Factory(parameters.templateService));
-        processors.put(AppendProcessor.TYPE, new AppendProcessor.Factory(parameters.templateService));
-        processors.put(RenameProcessor.TYPE, new RenameProcessor.Factory());
-        processors.put(RemoveProcessor.TYPE, new RemoveProcessor.Factory(parameters.templateService));
-        processors.put(SplitProcessor.TYPE, new SplitProcessor.Factory());
-        processors.put(JoinProcessor.TYPE, new JoinProcessor.Factory());
-        processors.put(UppercaseProcessor.TYPE, new UppercaseProcessor.Factory());
-        processors.put(LowercaseProcessor.TYPE, new LowercaseProcessor.Factory());
-        processors.put(TrimProcessor.TYPE, new TrimProcessor.Factory());
-        processors.put(ConvertProcessor.TYPE, new ConvertProcessor.Factory());
-        processors.put(GsubProcessor.TYPE, new GsubProcessor.Factory());
-        processors.put(FailProcessor.TYPE, new FailProcessor.Factory(parameters.templateService));
-        processors.put(ForEachProcessor.TYPE, new ForEachProcessor.Factory());
-        processors.put(DateIndexNameProcessor.TYPE, new DateIndexNameProcessor.Factory());
-        processors.put(SortProcessor.TYPE, new SortProcessor.Factory());
-        processors.put(GrokProcessor.TYPE, new GrokProcessor.Factory(builtinPatterns));
-        processors.put(ScriptProcessor.TYPE, new ScriptProcessor.Factory(parameters.scriptService));
-        processors.put(DotExpanderProcessor.TYPE, new DotExpanderProcessor.Factory());
-        processors.put(JsonProcessor.TYPE, new JsonProcessor.Factory());
-        return Collections.unmodifiableMap(processors);
+        return Map.ofEntries(
+                entry(DateProcessor.TYPE, new DateProcessor.Factory(parameters.scriptService)),
+                entry(SetProcessor.TYPE, new SetProcessor.Factory(parameters.scriptService)),
+                entry(AppendProcessor.TYPE, new AppendProcessor.Factory(parameters.scriptService)),
+                entry(RenameProcessor.TYPE, new RenameProcessor.Factory(parameters.scriptService)),
+                entry(RemoveProcessor.TYPE, new RemoveProcessor.Factory(parameters.scriptService)),
+                entry(SplitProcessor.TYPE, new SplitProcessor.Factory()),
+                entry(JoinProcessor.TYPE, new JoinProcessor.Factory()),
+                entry(UppercaseProcessor.TYPE, new UppercaseProcessor.Factory()),
+                entry(LowercaseProcessor.TYPE, new LowercaseProcessor.Factory()),
+                entry(TrimProcessor.TYPE, new TrimProcessor.Factory()),
+                entry(ConvertProcessor.TYPE, new ConvertProcessor.Factory()),
+                entry(GsubProcessor.TYPE, new GsubProcessor.Factory()),
+                entry(FailProcessor.TYPE, new FailProcessor.Factory(parameters.scriptService)),
+                entry(ForEachProcessor.TYPE, new ForEachProcessor.Factory(parameters.scriptService)),
+                entry(DateIndexNameProcessor.TYPE, new DateIndexNameProcessor.Factory(parameters.scriptService)),
+                entry(SortProcessor.TYPE, new SortProcessor.Factory()),
+                entry(GrokProcessor.TYPE, new GrokProcessor.Factory(GROK_PATTERNS, createGrokThreadWatchdog(parameters))),
+                entry(ScriptProcessor.TYPE, new ScriptProcessor.Factory(parameters.scriptService)),
+                entry(DotExpanderProcessor.TYPE, new DotExpanderProcessor.Factory()),
+                entry(JsonProcessor.TYPE, new JsonProcessor.Factory()),
+                entry(KeyValueProcessor.TYPE, new KeyValueProcessor.Factory()),
+                entry(URLDecodeProcessor.TYPE, new URLDecodeProcessor.Factory()),
+                entry(BytesProcessor.TYPE, new BytesProcessor.Factory()),
+                entry(PipelineProcessor.TYPE, new PipelineProcessor.Factory(parameters.ingestService)),
+                entry(DissectProcessor.TYPE, new DissectProcessor.Factory()),
+                entry(DropProcessor.TYPE, new DropProcessor.Factory()),
+                entry(HtmlStripProcessor.TYPE, new HtmlStripProcessor.Factory()));
     }
 
-    // Code for loading built-in grok patterns packaged with the jar file:
-
-    private static final String[] PATTERN_NAMES = new String[] {
-            "aws", "bacula", "bro", "exim", "firewalls", "grok-patterns", "haproxy",
-            "java", "junos", "linux-syslog", "mcollective-patterns", "mongodb", "nagios",
-            "postgresql", "rails", "redis", "ruby"
-    };
-
-    public static Map<String, String> loadBuiltinPatterns() throws IOException {
-        Map<String, String> builtinPatterns = new HashMap<>();
-        for (String pattern : PATTERN_NAMES) {
-            try(InputStream is = IngestCommonPlugin.class.getResourceAsStream("/patterns/" + pattern)) {
-                loadPatterns(builtinPatterns, is);
-            }
-        }
-        return Collections.unmodifiableMap(builtinPatterns);
+    @Override
+    public List<ActionHandler<? extends ActionRequest, ? extends ActionResponse>> getActions() {
+        return Collections.singletonList(
+                new ActionHandler<>(GrokProcessorGetAction.INSTANCE, GrokProcessorGetAction.TransportAction.class));
     }
 
-    private static void loadPatterns(Map<String, String> patternBank, InputStream inputStream) throws IOException {
-        String line;
-        BufferedReader br = new BufferedReader(new InputStreamReader(inputStream, StandardCharsets.UTF_8));
-        while ((line = br.readLine()) != null) {
-            String trimmedLine = line.replaceAll("^\\s+", "");
-            if (trimmedLine.startsWith("#") || trimmedLine.length() == 0) {
-                continue;
-            }
-
-            String[] parts = trimmedLine.split("\\s+", 2);
-            if (parts.length == 2) {
-                patternBank.put(parts[0], parts[1]);
-            }
-        }
+    @Override
+    public List<RestHandler> getRestHandlers(Settings settings, RestController restController, ClusterSettings clusterSettings,
+                                             IndexScopedSettings indexScopedSettings, SettingsFilter settingsFilter,
+                                             IndexNameExpressionResolver indexNameExpressionResolver,
+                                             Supplier<DiscoveryNodes> nodesInCluster) {
+        return Arrays.asList(new GrokProcessorGetAction.RestAction(settings, restController));
     }
+
+    @Override
+    public List<Setting<?>> getSettings() {
+        return Arrays.asList(WATCHDOG_INTERVAL, WATCHDOG_MAX_EXECUTION_TIME);
+    }
+
+    private static ThreadWatchdog createGrokThreadWatchdog(Processor.Parameters parameters) {
+        long intervalMillis = WATCHDOG_INTERVAL.get(parameters.env.settings()).getMillis();
+        long maxExecutionTimeMillis = WATCHDOG_MAX_EXECUTION_TIME.get(parameters.env.settings()).getMillis();
+        return ThreadWatchdog.newInstance(intervalMillis, maxExecutionTimeMillis,
+            parameters.relativeTimeSupplier, parameters.scheduler::apply);
+    }
+
 }
