@@ -30,6 +30,7 @@ import com.github.mustachejava.TemplateContext;
 import com.github.mustachejava.codes.DefaultMustache;
 import com.github.mustachejava.codes.IterableCode;
 import com.github.mustachejava.codes.WriteCode;
+import org.apache.lucene.search.highlight.DefaultEncoder;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.common.xcontent.XContentType;
@@ -40,7 +41,6 @@ import java.io.Writer;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -52,22 +52,18 @@ import java.util.regex.Pattern;
 
 public class CustomMustacheFactory extends DefaultMustacheFactory {
 
-    static final String CONTENT_TYPE_PARAM = "content_type";
-
+    static final String JSON_MIME_TYPE_WITH_CHARSET = "application/json; charset=UTF-8";
     static final String JSON_MIME_TYPE = "application/json";
     static final String PLAIN_TEXT_MIME_TYPE = "text/plain";
     static final String X_WWW_FORM_URLENCODED_MIME_TYPE = "application/x-www-form-urlencoded";
 
     private static final String DEFAULT_MIME_TYPE = JSON_MIME_TYPE;
 
-    private static final Map<String, Supplier<Encoder>> ENCODERS;
-    static {
-        Map<String, Supplier<Encoder>> encoders = new HashMap<>();
-        encoders.put(JSON_MIME_TYPE, JsonEscapeEncoder::new);
-        encoders.put(PLAIN_TEXT_MIME_TYPE, DefaultEncoder::new);
-        encoders.put(X_WWW_FORM_URLENCODED_MIME_TYPE, UrlEncoder::new);
-        ENCODERS = Collections.unmodifiableMap(encoders);
-    }
+    private static final Map<String, Supplier<Encoder>> ENCODERS = Map.of(
+            JSON_MIME_TYPE_WITH_CHARSET, JsonEscapeEncoder::new,
+            JSON_MIME_TYPE, JsonEscapeEncoder::new,
+            PLAIN_TEXT_MIME_TYPE, DefaultEncoder::new,
+            X_WWW_FORM_URLENCODED_MIME_TYPE, UrlEncoder::new);
 
     private final Encoder encoder;
 
@@ -91,7 +87,7 @@ public class CustomMustacheFactory extends DefaultMustacheFactory {
     }
 
     static Encoder createEncoder(String mimeType) {
-        Supplier<Encoder> supplier = ENCODERS.get(mimeType);
+        final Supplier<Encoder> supplier = ENCODERS.get(mimeType);
         if (supplier == null) {
             throw new IllegalArgumentException("No encoder found for MIME type [" + mimeType + "]");
         }
@@ -105,7 +101,7 @@ public class CustomMustacheFactory extends DefaultMustacheFactory {
 
     class CustomMustacheVisitor extends DefaultMustacheVisitor {
 
-        public CustomMustacheVisitor(DefaultMustacheFactory df) {
+        CustomMustacheVisitor(DefaultMustacheFactory df) {
             super(df);
         }
 
@@ -132,7 +128,7 @@ public class CustomMustacheFactory extends DefaultMustacheFactory {
 
         private final String code;
 
-        public CustomCode(TemplateContext tc, DefaultMustacheFactory df, Mustache mustache, String code) {
+        CustomCode(TemplateContext tc, DefaultMustacheFactory df, Mustache mustache, String code) {
             super(tc, df, mustache, extractVariableName(code, mustache, tc));
             this.code = Objects.requireNonNull(code);
         }
@@ -187,7 +183,7 @@ public class CustomMustacheFactory extends DefaultMustacheFactory {
 
         private static final String CODE = "toJson";
 
-        public ToJsonCode(TemplateContext tc, DefaultMustacheFactory df, Mustache mustache, String variable) {
+        ToJsonCode(TemplateContext tc, DefaultMustacheFactory df, Mustache mustache, String variable) {
             super(tc, df, mustache, CODE);
             if (CODE.equalsIgnoreCase(variable) == false) {
                 throw new MustacheException("Mismatch function code [" + CODE + "] cannot be applied to [" + variable + "]");
@@ -202,11 +198,9 @@ public class CustomMustacheFactory extends DefaultMustacheFactory {
                     return null;
                 }
                 try (XContentBuilder builder = XContentBuilder.builder(XContentType.JSON.xContent())) {
-                    if (resolved == null) {
-                        builder.nullValue();
-                    } else if (resolved instanceof Iterable) {
+                    if (resolved instanceof Iterable) {
                         builder.startArray();
-                        for (Object o : (Iterable) resolved) {
+                        for (Object o : (Iterable<?>) resolved) {
                             builder.value(o);
                         }
                         builder.endArray();
@@ -216,7 +210,7 @@ public class CustomMustacheFactory extends DefaultMustacheFactory {
                         // Do not handle as JSON
                         return oh.stringify(resolved);
                     }
-                    return builder.string();
+                    return Strings.toString(builder);
                 } catch (IOException e) {
                     throw new MustacheException("Failed to convert object to JSON", e);
                 }
@@ -238,12 +232,12 @@ public class CustomMustacheFactory extends DefaultMustacheFactory {
 
         private final String delimiter;
 
-        public JoinerCode(TemplateContext tc, DefaultMustacheFactory df, Mustache mustache, String delimiter) {
+        JoinerCode(TemplateContext tc, DefaultMustacheFactory df, Mustache mustache, String delimiter) {
             super(tc, df, mustache, CODE);
             this.delimiter = delimiter;
         }
 
-        public JoinerCode(TemplateContext tc, DefaultMustacheFactory df, Mustache mustache) {
+        JoinerCode(TemplateContext tc, DefaultMustacheFactory df, Mustache mustache) {
             this(tc, df, mustache, DEFAULT_DELIMITER);
         }
 
@@ -254,7 +248,7 @@ public class CustomMustacheFactory extends DefaultMustacheFactory {
                     return null;
                 } else if (resolved instanceof Iterable) {
                     StringJoiner joiner = new StringJoiner(delimiter);
-                    for (Object o : (Iterable) resolved) {
+                    for (Object o : (Iterable<?>) resolved) {
                         joiner.add(oh.stringify(o));
                     }
                     return joiner.toString();
@@ -272,7 +266,7 @@ public class CustomMustacheFactory extends DefaultMustacheFactory {
 
         private static final Pattern PATTERN = Pattern.compile("^(?:" + CODE + " delimiter='(.*)')$");
 
-        public CustomJoinerCode(TemplateContext tc, DefaultMustacheFactory df, Mustache mustache, String variable) {
+        CustomJoinerCode(TemplateContext tc, DefaultMustacheFactory df, Mustache mustache, String variable) {
             super(tc, df, mustache, extractDelimiter(variable));
         }
 
@@ -298,7 +292,7 @@ public class CustomMustacheFactory extends DefaultMustacheFactory {
         private static final String CODE = "url";
         private final Encoder encoder;
 
-        public UrlEncoderCode(TemplateContext tc, DefaultMustacheFactory df, Mustache mustache, String variable) {
+        UrlEncoderCode(TemplateContext tc, DefaultMustacheFactory df, Mustache mustache, String variable) {
             super(tc, df, mustache.getCodes(), variable);
             this.encoder = new UrlEncoder();
         }
@@ -335,7 +329,7 @@ public class CustomMustacheFactory extends DefaultMustacheFactory {
          * @param s      The string to encode
          * @param writer The {@link Writer} to which the encoded string will be written to
          */
-        void encode(final String s, final Writer writer) throws IOException;
+        void encode(String s, Writer writer) throws IOException;
     }
 
     /**
