@@ -19,59 +19,78 @@
 
 package org.elasticsearch.painless;
 
-import org.elasticsearch.painless.Definition.Method;
-import org.elasticsearch.painless.Definition.MethodKey;
-import org.elasticsearch.painless.Definition.Type;
+import org.elasticsearch.painless.ScriptClassInfo.MethodArgument;
+import org.elasticsearch.painless.lookup.PainlessLookup;
+import org.elasticsearch.painless.lookup.PainlessLookupUtility;
 
-import java.util.Arrays;
+import java.lang.invoke.MethodType;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
+
+import static org.elasticsearch.painless.lookup.PainlessLookupUtility.typeToJavaType;
 
 /**
  * Tracks user defined methods and variables across compilation phases.
  */
 public final class Locals {
-    
-    /** Reserved word: params map parameter */
-    public static final String PARAMS = "params";
-    /** Reserved word: Lucene scorer parameter */
-    public static final String SCORER = "#scorer";
-    /** Reserved word: _value variable for aggregations */
-    public static final String VALUE  = "_value";
-    /** Reserved word: _score variable for search scripts */
-    public static final String SCORE  = "_score";
-    /** Reserved word: ctx map for executable scripts */
-    public static final String CTX    = "ctx";
+
+    /**
+     * Constructs a local method key used to lookup local methods from a painless class.
+     */
+    public static String buildLocalMethodKey(String methodName, int methodArity) {
+        return methodName + "/" + methodArity;
+    }
+
+    /**
+     * Stores information about methods directly callable on the generated script class.
+     */
+    public static class LocalMethod {
+        public final String name;
+        public final Class<?> returnType;
+        public final List<Class<?>> typeParameters;
+        public final MethodType methodType;
+
+        public LocalMethod(String name, Class<?> returnType, List<Class<?>> typeParameters, MethodType methodType) {
+            this.name = name;
+            this.returnType = returnType;
+            this.typeParameters = typeParameters;
+            this.methodType = methodType;
+        }
+    }
+
     /** Reserved word: loop counter */
     public static final String LOOP   = "#loop";
     /** Reserved word: unused */
     public static final String THIS   = "#this";
-    /** Reserved word: unused */
-    public static final String DOC    = "doc";
-    
-    /** Map of always reserved keywords */
-    public static final Set<String> KEYWORDS = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
-            THIS,PARAMS,SCORER,DOC,VALUE,SCORE,CTX,LOOP
-    )));
-    
+
+    /** Set of reserved keywords. */
+    public static final Set<String> KEYWORDS = Set.of(THIS, LOOP);
+
     /** Creates a new local variable scope (e.g. loop) inside the current scope */
     public static Locals newLocalScope(Locals currentScope) {
-        return new Locals(currentScope);
+        Locals locals = new Locals(currentScope);
+        locals.methods = currentScope.methods;
+
+        return locals;
     }
-    
-    /** 
+
+    /**
      * Creates a new lambda scope inside the current scope
      * <p>
      * This is just like {@link #newFunctionScope}, except the captured parameters are made read-only.
      */
-    public static Locals newLambdaScope(Locals programScope, Type returnType, List<Parameter> parameters, 
+    public static Locals newLambdaScope(Locals programScope, String name, Class<?> returnType, List<Parameter> parameters,
                                         int captureCount, int maxLoopCounter) {
-        Locals locals = new Locals(programScope, returnType);
+        Locals locals = new Locals(programScope, programScope.painlessLookup, programScope.baseClass, returnType, KEYWORDS);
+        locals.methods = programScope.methods;
+        List<Class<?>> typeParameters = parameters.stream().map(parameter -> typeToJavaType(parameter.clazz)).collect(Collectors.toList());
+        locals.methods.put(buildLocalMethodKey(name, parameters.size()), new LocalMethod(name, returnType, typeParameters,
+                MethodType.methodType(typeToJavaType(returnType), typeParameters)));
         for (int i = 0; i < parameters.size(); i++) {
             Parameter parameter = parameters.get(i);
             // TODO: allow non-captures to be r/w:
@@ -79,74 +98,59 @@ public final class Locals {
             // currently, this cannot be allowed, as we swap in real types,
             // but that can prevent a store of a different type...
             boolean isCapture = true;
-            locals.addVariable(parameter.location, parameter.type, parameter.name, isCapture);
+            locals.addVariable(parameter.location, parameter.clazz, parameter.name, isCapture);
         }
         // Loop counter to catch infinite loops.  Internal use only.
         if (maxLoopCounter > 0) {
-            locals.defineVariable(null, Definition.INT_TYPE, LOOP, true);
+            locals.defineVariable(null, int.class, LOOP, true);
         }
         return locals;
     }
-    
+
     /** Creates a new function scope inside the current scope */
-    public static Locals newFunctionScope(Locals programScope, Type returnType, List<Parameter> parameters, int maxLoopCounter) {
-        Locals locals = new Locals(programScope, returnType);
+    public static Locals newFunctionScope(Locals programScope, Class<?> returnType, List<Parameter> parameters, int maxLoopCounter) {
+        Locals locals = new Locals(programScope, programScope.painlessLookup, programScope.baseClass, returnType, KEYWORDS);
+        locals.methods = programScope.methods;
         for (Parameter parameter : parameters) {
-            locals.addVariable(parameter.location, parameter.type, parameter.name, false);
+            locals.addVariable(parameter.location, parameter.clazz, parameter.name, false);
         }
         // Loop counter to catch infinite loops.  Internal use only.
         if (maxLoopCounter > 0) {
-            locals.defineVariable(null, Definition.INT_TYPE, LOOP, true);
+            locals.defineVariable(null, int.class, LOOP, true);
         }
         return locals;
     }
-    
+
     /** Creates a new main method scope */
-    public static Locals newMainMethodScope(Locals programScope, boolean usesScore, boolean usesCtx, int maxLoopCounter) {
-        Locals locals = new Locals(programScope, Definition.OBJECT_TYPE);
-        // This reference.  Internal use only.
-        locals.defineVariable(null, Definition.getType("Object"), THIS, true);
+    public static Locals newMainMethodScope(ScriptClassInfo scriptClassInfo, Locals programScope, int maxLoopCounter) {
+        Locals locals = new Locals(programScope, programScope.painlessLookup,
+                scriptClassInfo.getBaseClass(), scriptClassInfo.getExecuteMethodReturnType(), KEYWORDS);
+        locals.methods = programScope.methods;
+        // This reference. Internal use only.
+        locals.defineVariable(null, Object.class, THIS, true);
 
-        // Input map of variables passed to the script.
-        locals.defineVariable(null, Definition.getType("Map"), PARAMS, true);
-
-        // Scorer parameter passed to the script.  Internal use only.
-        locals.defineVariable(null, Definition.DEF_TYPE, SCORER, true);
-
-        // Doc parameter passed to the script. TODO: Currently working as a Map, we can do better?
-        locals.defineVariable(null, Definition.getType("Map"), DOC, true);
-
-        // Aggregation _value parameter passed to the script.
-        locals.defineVariable(null, Definition.DEF_TYPE, VALUE, true);
-
-        // Shortcut variables.
-
-        // Document's score as a read-only double.
-        if (usesScore) {
-            locals.defineVariable(null, Definition.DOUBLE_TYPE, SCORE, true);
-        }
-
-        // The ctx map set by executable scripts as a read-only map.
-        if (usesCtx) {
-            locals.defineVariable(null, Definition.getType("Map"), CTX, true);
+        // Method arguments
+        for (MethodArgument arg : scriptClassInfo.getExecuteArguments()) {
+            locals.defineVariable(null, arg.getClazz(), arg.getName(), true);
         }
 
         // Loop counter to catch infinite loops.  Internal use only.
         if (maxLoopCounter > 0) {
-            locals.defineVariable(null, Definition.INT_TYPE, LOOP, true);
+            locals.defineVariable(null, int.class, LOOP, true);
         }
         return locals;
     }
-    
+
     /** Creates a new program scope: the list of methods. It is the parent for all methods */
-    public static Locals newProgramScope(Collection<Method> methods) {
-        Locals locals = new Locals(null, null);
-        for (Method method : methods) {
+    public static Locals newProgramScope(ScriptClassInfo scriptClassInfo, PainlessLookup painlessLookup, Collection<LocalMethod> methods) {
+        Locals locals = new Locals(null, painlessLookup, scriptClassInfo.getBaseClass(), null, null);
+        locals.methods = new HashMap<>();
+        for (LocalMethod method : methods) {
             locals.addMethod(method);
         }
         return locals;
     }
-    
+
     /** Checks if a variable exists or not, in this scope or any parents. */
     public boolean hasVariable(String name) {
         Variable variable = lookupVariable(null, name);
@@ -158,7 +162,7 @@ public final class Locals {
         }
         return false;
     }
-    
+
     /** Accesses a variable. This will throw IAE if the variable does not exist */
     public Variable getVariable(Location location, String name) {
         Variable variable = lookupVariable(location, name);
@@ -170,35 +174,28 @@ public final class Locals {
         }
         throw location.createError(new IllegalArgumentException("Variable [" + name + "] is not defined."));
     }
-    
+
     /** Looks up a method. Returns null if the method does not exist. */
-    public Method getMethod(MethodKey key) {
-        Method method = lookupMethod(key);
-        if (method != null) {
-            return method;
-        }
-        if (parent != null) {
-            return parent.getMethod(key);
-        }
-        return null;
+    public LocalMethod getMethod(String methodName, int methodArity) {
+        return methods.get(buildLocalMethodKey(methodName, methodArity));
     }
-    
+
     /** Creates a new variable. Throws IAE if the variable has already been defined (even in a parent) or reserved. */
-    public Variable addVariable(Location location, Type type, String name, boolean readonly) {
+    public Variable addVariable(Location location, Class<?> clazz, String name, boolean readonly) {
         if (hasVariable(name)) {
             throw location.createError(new IllegalArgumentException("Variable [" + name + "] is already defined."));
         }
-        if (KEYWORDS.contains(name)) {
+        if (keywords.contains(name)) {
             throw location.createError(new IllegalArgumentException("Variable [" + name + "] is reserved."));
         }
-        return defineVariable(location, type, name, readonly);
+        return defineVariable(location, clazz, name, readonly);
     }
-    
+
     /** Return type of this scope (e.g. int, if inside a function that returns int) */
-    public Type getReturnType() {
+    public Class<?> getReturnType() {
         return returnType;
     }
-    
+
     /** Returns the top-level program scope. */
     public Locals getProgramScope() {
         Locals locals = this;
@@ -207,33 +204,52 @@ public final class Locals {
         }
         return locals;
     }
-    
+
+    /** Whitelist against which this script is being compiled. */
+    public PainlessLookup getPainlessLookup() {
+        return painlessLookup;
+    }
+
+    /** Base class for the compiled script. */
+    public Class<?> getBaseClass() {
+        return baseClass;
+    }
+
     ///// private impl
 
+    /** Whitelist against which this script is being compiled. */
+    private final PainlessLookup painlessLookup;
+    /** Base class for the compiled script. */
+    private final Class<?> baseClass;
     // parent scope
     private final Locals parent;
     // return type of this scope
-    private final Type returnType;
+    private final Class<?> returnType;
+    // keywords for this scope
+    private final Set<String> keywords;
     // next slot number to assign
     private int nextSlotNumber;
     // variable name -> variable
     private Map<String,Variable> variables;
     // method name+arity -> methods
-    private Map<MethodKey,Method> methods;
+    private Map<String,LocalMethod> methods;
 
     /**
      * Create a new Locals
      */
     private Locals(Locals parent) {
-        this(parent, parent.getReturnType());
+        this(parent, parent.painlessLookup, parent.baseClass, parent.returnType, parent.keywords);
     }
-    
+
     /**
      * Create a new Locals with specified return type
      */
-    private Locals(Locals parent, Type returnType) {
+    private Locals(Locals parent, PainlessLookup painlessLookup, Class<?> baseClass, Class<?> returnType, Set<String> keywords) {
         this.parent = parent;
+        this.painlessLookup = painlessLookup;
+        this.baseClass = baseClass;
         this.returnType = returnType;
+        this.keywords = keywords;
         if (parent == null) {
             this.nextSlotNumber = 0;
         } else {
@@ -254,34 +270,24 @@ public final class Locals {
         return variables.get(name);
     }
 
-    /** Looks up a method at this scope only. Returns null if the method does not exist. */
-    private Method lookupMethod(MethodKey key) {
-        if (methods == null) {
-            return null;
-        }
-        return methods.get(key);
+    public Map<String, LocalMethod> getMethods() {
+        return Collections.unmodifiableMap(methods);
     }
 
-    
     /** Defines a variable at this scope internally. */
-    private Variable defineVariable(Location location, Type type, String name, boolean readonly) {
+    private Variable defineVariable(Location location, Class<?> type, String name, boolean readonly) {
         if (variables == null) {
             variables = new HashMap<>();
         }
         Variable variable = new Variable(location, name, type, getNextSlot(), readonly);
         variables.put(name, variable); // TODO: check result
-        nextSlotNumber += type.type.getSize();
+        nextSlotNumber += MethodWriter.getType(type).getSize();
         return variable;
     }
-    
-    private void addMethod(Method method) {
-        if (methods == null) {
-            methods = new HashMap<>();
-        }
-        methods.put(new MethodKey(method.name, method.arguments.size()), method);
-        // TODO: check result
-    }
 
+    private void addMethod(LocalMethod method) {
+        methods.put(buildLocalMethodKey(method.name, method.typeParameters.size()), method);
+    }
 
     private int getNextSlot() {
         return nextSlotNumber;
@@ -290,32 +296,45 @@ public final class Locals {
     public static final class Variable {
         public final Location location;
         public final String name;
-        public final Type type;
+        public final Class<?> clazz;
         public final boolean readonly;
         private final int slot;
-        
-        public Variable(Location location, String name, Type type, int slot, boolean readonly) {
+
+        public Variable(Location location, String name, Class<?> clazz, int slot, boolean readonly) {
             this.location = location;
             this.name = name;
-            this.type = type;
+            this.clazz = clazz;
             this.slot = slot;
             this.readonly = readonly;
         }
-        
+
         public int getSlot() {
             return slot;
         }
+
+        @Override
+        public String toString() {
+            StringBuilder b = new StringBuilder();
+            b.append("Variable[type=").append(PainlessLookupUtility.typeToCanonicalTypeName(clazz));
+            b.append(",name=").append(name);
+            b.append(",slot=").append(slot);
+            if (readonly) {
+                b.append(",readonly");
+            }
+            b.append(']');
+            return b.toString();
+        }
     }
-    
+
     public static final class Parameter {
         public final Location location;
         public final String name;
-        public final Type type;
+        public final Class<?> clazz;
 
-        public Parameter(Location location, String name, Type type) {
+        public Parameter(Location location, String name, Class<?> clazz) {
             this.location = location;
             this.name = name;
-            this.type = type;
+            this.clazz = clazz;
         }
     }
 }
