@@ -19,12 +19,9 @@
 
 package org.elasticsearch.test.rest.yaml;
 
-import org.elasticsearch.test.ESIntegTestCase;
+import org.elasticsearch.test.rest.ESRestTestCase;
 
-import java.util.Arrays;
 import java.util.List;
-
-import static java.util.Collections.unmodifiableList;
 
 /**
  * Allows to register additional features supported by the tests runner.
@@ -35,14 +32,21 @@ import static java.util.Collections.unmodifiableList;
  * and the related skip sections can be removed from the tests as well.
  */
 public final class Features {
-    private static final List<String> SUPPORTED = unmodifiableList(Arrays.asList(
+
+    private static final List<String> SUPPORTED = List.of(
             "catch_unauthorized",
+            "default_shards",
             "embedded_stash_key",
-            "groovy_scripting",
             "headers",
+            "node_selector",
+            "stash_in_key",
             "stash_in_path",
+            "stash_path_replace",
             "warnings",
-            "yaml"));
+            "yaml",
+            "contains",
+            "transform_and_set",
+            "arbitrary_key");
 
     private Features() {
 
@@ -53,10 +57,15 @@ public final class Features {
      */
     public static boolean areAllSupported(List<String> features) {
         for (String feature : features) {
-            if ("requires_replica".equals(feature) && ESIntegTestCase.cluster().numDataNodes() >= 2) {
-                continue;
-            }
-            if (!SUPPORTED.contains(feature)) {
+            if (feature.equals("xpack")) {
+                if (false == ESRestTestCase.hasXPack()) {
+                    return false;
+                }
+            } else if (feature.equals("no_xpack")) {
+                if (ESRestTestCase.hasXPack()) {
+                    return false;
+                }
+            } else if (false == SUPPORTED.contains(feature)) {
                 return false;
             }
         }
